2009-09-29

	* libsylph/utils.c: made writing to log file thread-safe.

2009-09-29

	* src/logwindow.[ch]: made LogWindow thread-safe.
	* libsylph/utils.c
	  libsylph/socket.c
	  src/inc.c
	  src/statusbar.c
	  src/send_message.c
	  src/main.c: made gdk_threads_enter() / gdk_threads_leave()
	  reentrant.

2009-09-25

	* libsylph/utils.[ch]
	  libsylph/socket.[ch]
	  libsylph/session.c
	  libsylph/pop.c
	  src/inc.c
	  src/main.c: fixed the handling of GDK thread lock.

2009-09-18

	* libsylph/utils.c: execute_command_line_async_wait(): disable
	  threading if USE_THREADS is not set.

2009-09-18

	* introduced multi-threading.
	* libsylph/session.c
	  libsylph/socket.[ch]: win32: connect() on another thread to avoid
	  UI blocking.
	* libsylph/filter.c
	  libsylph/utils.[ch]: execute command on another thread to avoid
	  UI blocking.
	* src/rpop3.c
	  src/compose.c
	  src/inc.c
	  src/trayicon.c
	  src/main.c
	  src/send_message.c
	  src/folderview.c
	  src/sigstatus.c: surround timeout/IO-watch callback functions with 
	  gdk_threads_enter() and gdk_threads_leave().

2009-09-17

	* folderview_new_folder_cb(): win32: fixed prohibited character check.

2009-09-15

	* libsylph/mh.c
	  libsylph/procmsg.c
	  src/rpop3.c
	  src/compose.c: mh_add_msgs(): generate cache on adding messages.
	  Cleanup the code.

2009-09-15

	* libsylph/procmsg.c: minor optimization: use g_slist_prepend() for
	  mark/cache queue.

2009-09-14

	* libsylph/procmsg.c: use MsgFlagInfo struct for mark queue to reduce
	  its memory usage.

2009-09-14

	* src/import.c: update summary cache on eml import.

2009-09-14

	* libsylph/mh.c: update summary cache on move/copy.

2009-09-14

	* libsylph/mbox.c: update summary cache when importing from mbox.

2009-09-14

	* libsylph/mh.c
	  libsylph/procmsg.[ch]
	  libsylph/folder.[ch]
	  libsylph/virtual.c
	  libsylph/news.c
	  libsylph/filter.c
	  libsylph/imap.c
	  src/inc.c
	  src/summaryview.c: update summary caches on receiving. This