@@ -1,3 +1,10 @@
+2009-09-30
+
+	* libsylph/socket.[ch]
+	  libsylph/session.c: renamed sock_connect_async() to
+	  sock_connect_async_thread().
+	* libsylph/imap.c: imap_open(): connect in another thread.
+
 2009-09-29
 
 	* libsylph/utils.c: made writing to log file thread-safe.
